--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0"
   },
